re PR c++/8724 (explicit destructor call for incomplete class allowed)

PR c++/8724
	* call.c (build_method_call): Make sure that the type destroyed in
	an explicit destructor call is complete.

	PR c++/8724
	* g++.dg/expr/dtor1.C: New test.

From-SVN: r63230