gcc/testsuite/g++.dg/expr/dtor1.C
@@ -1,0 +1,7 @@
+class Foo;
+
+void
+bar(void* p)
+{
+  static_cast<Foo*>(p)->~Foo(); // { dg-error "" }
+}
